Add operator role
